# livelog

./: .gitignore  Cargo.toml  Rocket.toml  [200~{"payload_type":"Message","date":"2024-02-20T04:56:44.399300549Z","payload_data":{"message":"Test"}}  logs.sqlite
db/: Cargo.toml
db/src/: lib.rs
db/src/models/: log.rs
main/: Cargo.toml
main/src/: features.rs  main.rs
main/src/features/: main.rs  shared.rs
main/src/features/main/: live.html.tera  logchunk.html.tera  logentry.html.tera  main.html.tera  newlogs.html.tera
main/src/features/main/payloads/: json.html.tera  message.html.tera  variable.html.tera
main/src/features/shared/: layout.html.tera  macros.html  macros.html.tera  tailwind.config.js
main/src/features/shared/static/: collapser.js  site.css
migrations/: 20240219045324_initial.sql  20240220061326_log_struct.sql  20240222054859_drop_type.sql
payloads/: Cargo.toml
payloads/src/: payload.rs
