[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
sqlx = { version = "0.7.3", default-features = false, features = ["runtime-async-std", "sqlite", "macros", "time", "uuid"]}
db = { path = "../db" }
payloads = { path = "../payloads" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0"
log = "0.4.20"
env_logger = "0.11.*"

[dependencies.rocket_db_pools]
version = "0.1.0"
features = ["sqlx_sqlite"]

[dependencies.uuid]
version = "1.7.0"
features = [ "v4", "fast-rng", "macro-diagnostics", "serde" ]
